<resources>
    <string name="app_name" translatable="false">Super Home</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="light">Light</string>
    <string name="gain">Gain</string>
    <string name="name">Name</string>
    <string name="deviceName">Device Name</string>
    <string name="name_colon">Name:</string>
    <string name="displayed_name">Displayed name</string>
    <string name="displayed_name_colon">Displayed name:</string>
    <string name="displayed_env_sensor_dialog_tittle">Displayed info</string>
    <string name="OK" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="errors">Errors</string>
    <string name="uptime">Uptime</string>
    <string name="free_heap">Free heap</string>
    <string name="remaining">Remaining:</string>
    <string name="camera_recording_settings_tittle">Camera recording settings</string>
    <string name="do_not_record_label">Don\'t record hours:</string>
    <string name="resume_camera_recording_tittle">Resume recording at</string>
    <string name="shutters_tittle">Shutters</string>
    <string name="room_shutter_tittle">Room</string>
    <string name="kitchen_shutter_1_tittle">Kitchen 1</string>
    <string name="kitchen_shutter_2_tittle">Kitchen 2</string>
    <string name="tech_info_fragment_tittle">Devices Technical Info</string>
    <string name="build_timestamp_tittle">Build timestamp</string>
    <string name="last_request_time_tittle">Last request</string>
    <string name="menu_manager_tittle">Manager</string>
    <string name="menu_sensors_tittle">Sensors</string>
    <string name="menu_all_devices_tittle">All devices</string>
    <string name="fan_settings_tittle">Fan Settings</string>
    <string name="fan_turn_on_humidity_threshold">Turn on humidity threshold</string>
    <string name="manually_turned_on_timeout">Manually turned on working timeout</string>
    <string name="on_falling_humidity_working_timeout">On falling humidity working timeout</string>
    <string name="minutes">minutes</string>
    <string name="enter_displayed_name">Enter displayed name</string>
    <string name="settings">Settings</string>
    <string name="local_server_address_tittle">Local Server Address</string>
    <string name="global_server_address_tittle">Global Server Address</string>
    <string name="save">Save</string>
    <string name="local_wifi_ssid_tittle">Local WI-FI SSID</string>
    <string name="devices_button_tittle">Devices</string>
    <string name="devices_types_button_tittle">Devices Types</string>
    <string name="device_type_setup_tittle">Type</string>
    <string name="device_setup_keep_alive_interval_sec">Keep alive interval, sec.</string>
    <string name="device_setup_ip4_address">IP 4 address</string>
    <string name="add_new_button">Add new</string>
    <string name="confirm_delete_dialog_tittle">Delete</string>
    <string name="alarms">Alarms</string>
    <string name="motion_detector_tittle">Motion detector</string>
    <string name="date_time_tittle">Date/time</string>
    <string name="street_entrance_md">Entrance</string>
    <string name="street_entrance_yard_md">Entrance yard</string>
    <string name="street_porch_md">Porch</string>
    <string name="street_yard_md">Backyard</string>
    <string name="device_type_id">Device Type ID</string>
    <string name="displayed_device_type">Displayed Device Type</string>
    <string name="alarm_source">Alarm Source</string>
    <string name="ignore_alarms">Ignore Alarms</string>
    <string name="alarm_sources">Alarm Sources</string>
    <string name="select_device_type">Select Alarms Devices Type</string>
    <string name="alarms_displayed_order">Alarms Displayed Order</string>
    <string name="displayed_icon">Displayed Icon</string>
</resources>
