<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ua.dp.hammer.superhome.models.EnvSensorDisplayedInfoViewModel"/>
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="@dimen/dialog_layout_padding_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tittle_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/displayed_env_sensor_dialog_tittle"
                android:textAlignment="center"
                android:textSize="@dimen/dialog_text_size_tittle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/name_section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tittle_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="@dimen/dialog_text_size" />

                <TextView
                    android:id="@+id/name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.displayedInfo.name}"
                    android:textColor="@color/valueColor"
                    android:textSize="@dimen/dialog_text_size"
                    tools:text="A name" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/displayed_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_section">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/displayed_name"
                    android:textSize="@dimen/dialog_text_size" />

                <EditText
                    android:id="@+id/displayed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/enter_displayed_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.displayedInfo.displayedName}"
                    android:textAlignment="viewStart"
                    android:textColor="@color/valueColor"
                    android:textSize="@dimen/dialog_text_size" />
            </LinearLayout>

            <Switch
                android:id="@+id/temperature_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:checked="@={viewModel.displayedInfo.isTemperatureDisplayed}"
                android:text="@string/temperature"
                android:textSize="@dimen/dialog_text_size"
                android:visibility="@{viewModel.displayedInfo.temperatureOptionVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/displayed_name" />

            <Switch
                android:id="@+id/humidity_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:checked="@={viewModel.displayedInfo.isHumidityDisplayed}"
                android:text="@string/humidity"
                android:textSize="@dimen/dialog_text_size"
                android:visibility="@{viewModel.displayedInfo.humidityOptionVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature_switch" />

            <Switch
                android:id="@+id/light_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:checked="@={viewModel.displayedInfo.isLightDisplayed}"
                android:text="@string/light"
                android:textSize="@dimen/dialog_text_size"
                android:visibility="@{viewModel.displayedInfo.lightOptionVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/humidity_switch" />

            <Switch
                android:id="@+id/gain_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:checked="@={viewModel.displayedInfo.isGainDisplayed}"
                android:text="@string/gain"
                android:textSize="@dimen/dialog_text_size"
                android:visibility="@{viewModel.displayedInfo.gainOptionVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/light_switch" />

            <Switch
                android:id="@+id/errors_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:checked="@={viewModel.displayedInfo.areErrorsDisplayed}"
                android:text="@string/errors"
                android:textSize="@dimen/dialog_text_size"
                android:visibility="@{viewModel.displayedInfo.errorsOptionVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gain_switch" />

            <Switch
                android:id="@+id/uptime_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:checked="@={viewModel.displayedInfo.isUptimeDisplayed}"
                android:text="@string/uptime"
                android:textSize="@dimen/dialog_text_size"
                android:visibility="@{viewModel.displayedInfo.uptimeOptionVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/errors_switch" />

            <Switch
                android:id="@+id/free_heap_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:checked="@={viewModel.displayedInfo.isFreeHeapSpaceDisplayed}"
                android:text="@string/free_heap"
                android:textSize="@dimen/dialog_text_size"
                android:visibility="@{viewModel.displayedInfo.freeHeapSpaceOptionVisibility}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uptime_switch" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:text="@string/OK"
                app:layout_constraintEnd_toStartOf="@+id/cancelButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/free_heap_switch" />

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="@dimen/dialog_text_top_margin"
                android:text="@string/cancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/okButton"
                app:layout_constraintTop_toBottomOf="@+id/free_heap_switch" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>