<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="ua.dp.hammer.superhome.models.FanSettingsViewModel"/>
        <import type="ua.dp.hammer.superhome.utilities.DataBindingConverter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dialog_layout_padding_margin"
        android:tag="layout/fan_settings_dialog">

        <TextView
            android:id="@+id/tittle_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fan_settings_tittle"
            android:textAlignment="center"
            android:textSize="@dimen/dialog_text_size_tittle"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_top_margin"
            android:text="@string/name"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tittle_section" />

        <TextView
            android:id="@+id/nameValueView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.name}"
            android:textAlignment="viewStart"
            android:textColor="@color/valueColor"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameView"
            tools:text="The fan name" />

        <TextView
            android:id="@+id/fanTurnOnHumidityThresholdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_top_margin"
            android:text="@string/fan_turn_on_humidity_threshold"
            android:textAlignment="viewStart"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameValueView" />

        <EditText
            android:id="@+id/fanTurnOnHumidityThresholdValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="numberSigned"
            android:text="@={DataBindingConverter.convertStringToInteger(viewModel.turnOnHumidityThreshold)}"
            android:textAlignment="center"
            android:textColor="@color/valueColor"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fanTurnOnHumidityThresholdView"
            tools:text="85" />

        <TextView
            android:id="@+id/turnOnHumidityPercentagesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/fanTurnOnHumidityThresholdValue"
            app:layout_constraintStart_toEndOf="@+id/fanTurnOnHumidityThresholdValue"
            app:layout_constraintTop_toTopOf="@+id/fanTurnOnHumidityThresholdValue" />

        <TextView
            android:id="@+id/manuallyTurnedOnTimeoutView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_top_margin"
            android:text="@string/manually_turned_on_timeout"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fanTurnOnHumidityThresholdValue" />

        <EditText
            android:id="@+id/manuallyTurnedOnTimeoutValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="numberSigned"
            android:text="@={DataBindingConverter.convertStringToInteger(viewModel.manuallyTurnedOnTimeoutMinutes)}"
            android:textAlignment="center"
            android:textColor="@color/valueColor"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manuallyTurnedOnTimeoutView"
            tools:text="10" />

        <TextView
            android:id="@+id/manuallyTurnedOnPercentagesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintBottom_toTopOf="@+id/manuallyTurnedOnTimeoutValue"
            app:layout_constraintStart_toEndOf="@+id/manuallyTurnedOnTimeoutValue"
            app:layout_constraintTop_toBottomOf="@+id/manuallyTurnedOnTimeoutValue" />

        <TextView
            android:id="@+id/onFallingHumidityWorkingTimeoutView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_top_margin"
            android:text="@string/on_falling_humidity_working_timeout"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manuallyTurnedOnTimeoutValue" />

        <EditText
            android:id="@+id/onFallingHumidityWorkingTimeoutValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="numberSigned"
            android:text="@={DataBindingConverter.convertStringToInteger(viewModel.afterFallingThresholdWorkTimeoutMinutes)}"
            android:textAlignment="center"
            android:textColor="@color/valueColor"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onFallingHumidityWorkingTimeoutView"
            tools:text="30" />

        <TextView
            android:id="@+id/onFallingHumidityWorkingTimeoutPercentagesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minutes"
            android:textSize="@dimen/dialog_text_size"
            app:layout_constraintBottom_toTopOf="@+id/onFallingHumidityWorkingTimeoutValue"
            app:layout_constraintStart_toEndOf="@+id/onFallingHumidityWorkingTimeoutValue"
            app:layout_constraintTop_toBottomOf="@+id/onFallingHumidityWorkingTimeoutValue" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dialog_text_top_margin"
            android:text="@string/OK"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onFallingHumidityWorkingTimeoutValue" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/dialog_text_top_margin"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/okButton"
            app:layout_constraintTop_toBottomOf="@+id/onFallingHumidityWorkingTimeoutValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>